cmake_minimum_required(VERSION 3.20)
project(CSES1)

set(CMAKE_CXX_STANDARD 17)

#add_executable(AppleDivision IntroductoryProblems/AppleDivision.cpp)
#add_executable(BitData IntroductoryProblems/BitData.cpp)
#add_executable(BitStrings IntroductoryProblems/BitStrings.cpp)
#add_executable(CoinPiles IntroductoryProblems/CoinPiles.cpp)
#add_executable(IncreasingArray IntroductoryProblems/IncreasingArray.cpp)
#add_executable(MissingNumber IntroductoryProblems/MissingNumber.cpp)
#add_executable(NumberSpiral IntroductoryProblems/NumberSpiral.cpp)
#add_executable(Permutations IntroductoryProblems/Permutations.cpp)
#add_executable(Repetitions IntroductoryProblems/Repetitions.cpp)
#add_executable(TrailingZeros IntroductoryProblems/TrailingZeros.cpp)
#add_executable(TwoSets IntroductoryProblems/TwoSets.cpp)
#add_executable(WeirdAlgorithm IntroductoryProblems/WeirdAlgorithm.cpp)

add_executable(DistinctNumbers SortingAndSearching/DistinctNumbers.cpp )
add_executable(Apartments SortingAndSearching/Apartments.cpp)
add_executable(FerrisWheel SortingAndSearching/FerrisWheel.cpp)
add_executable(Concert SortingAndSearching/ConcertTickets.cpp)
add_executable(RestaurantCustomers SortingAndSearching/RestaurantCustomers.cpp)
add_executable(MovieFestival SortingAndSearching/MovieFestival.cpp)
